[gd_scene load_steps=4 format=3 uid="uid://dblud0y5ptrek"]

[ext_resource type="Script" path="res://ui/result_menu.gd" id="1_l1kqm"]
[ext_resource type="PackedScene" uid="uid://duuxoquut6pa5" path="res://ui/result_container.tscn" id="1_r3w12"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43rdi"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="ResultMenu" type="Panel"]
process_mode = 2
custom_minimum_size = Vector2(600, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l1kqm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "LEVEL COMPLETE!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TimeContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_r3w12")]
unique_name_in_owner = true
layout_mode = 2
label = "Time"

[node name="GlassContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_r3w12")]
unique_name_in_owner = true
layout_mode = 2
label = "Glass"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ScoreContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_r3w12")]
unique_name_in_owner = true
layout_mode = 2
label = "Score"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="ButtonContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_43rdi")

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "Menu"

[node name="Next" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 48
text = "Next"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Next" to="." method="_on_next_pressed"]
